# libvision

./: .gitignore  .travis.yml  CMakeLists.txt  Config.h.in  Makefile.am  README.md  TODO  bootstrap.sh  config.h.in  configure.ac  libvision.pc.cmake  vision.h.in  visionConfig.cmake.in
examples/LoadSave_RGB/: CMakeLists.txt  LoadSave_RGB.cpp
examples/compilation_cmake/: CMakeLists.txt  README.txt  main.cpp
include/: Makefile.am  visionlib.h  visionprocess.h
include/vision/: Config.h  camera.h  corner_fast.h  image.h  imagebuffer.h  imageref.h  pinholecam.h  scale.h  shitomasi.h  vision.h  visionprocess.h
include/vision/camera/: pinhole.h  pinholecam.h
include/vision/corners/: fast.h  shitomasi.h
include/vision/image/: color.h  image.h  image.hpp  imageref.h  scale.h
include/vision/io/: H264Decoder.h  H264Encoder.h  MKVEncoder.h  imageio.h  pixelcoding.h
include/vision/win32/: windows.h
include/visionlib/: camera.h  camera.hpp  image.h  imagebuffer.h  imageref.h  matrice.h  pinholecam.h  visionprocess.h
include/visionlib/corners/: ShiTomasi.h  fast.h
src/: Makefile  Makefile.am  ShiTomasi.cpp  corner_fast.cpp  function.cpp  image_fast.cpp  imagebuffer.cpp  imageref.cpp  pinhole.cpp  pinholecam.cpp  pixelcoding.cpp  scale.cpp  shitomasi.cpp  visionprocess.cpp
src/.deps/: function.Plo  function.Po  main.Po
src/io/: H264Decoder.cpp  H264Encoder.cpp  MKVEncoder.cpp  imageio.cpp
src/io/output/: matroska.c  matroska_ebml.c  output.h
src/win32/: windows.cpp
test/: CMakeLists.txt  compress.cpp  match.cpp  serialize.cpp
testing/: Makefile  Makefile.am  main.cpp
testing/.deps/: main.Po
utils/: ffmpeg-ubuntu-10.04.sh
vision-config/: main.cpp
