# Prelude.

AC_INIT([visionlib], [0.0], [druon@lirmm.fr])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign -Wall -Werror])

LT_INIT

# Checks for programs.

#AC_PROG_CC
AC_PROG_CXX

# Checks for libraries.

# Checks for header.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Output 

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile include/Makefile src/Makefile testing/Makefile])
AC_OUTPUT
