AM_CPPFLAGS = -I$(srcdir)/../include

lib_LTLIBRARIES = libvisionlib.la

libvisionlib_la_SOURCES = imagebuffer.cpp \
			  visionprocess.cpp \
			  fast/fast_9.cpp \
			  fast/fast_10.cpp \
			  fast/fast_11.cpp \
			  fast/fast_12.cpp \
			  fast/fast.cpp \
			  fast/nonmax.cpp \
			  image_fast.cpp \
			  ShiTomasi.cpp \
			  imageref.cpp \
			  pinholecam.cpp
