SET(EXEC_NAME serialize)

SET(${EXEC_NAME}_SRC
    serialize.cpp
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
LINK_DIRECTORIES(${${PROJECT_NAME}_BINARY_DIR})

ADD_EXECUTABLE(${EXEC_NAME}
    ${${EXEC_NAME}_SRC}
)

TARGET_LINK_LIBRARIES(${EXEC_NAME} ${PROJECT_NAME})

SET(EXEC_NAME match)

SET(${EXEC_NAME}_SRC
    match.cpp
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
LINK_DIRECTORIES(${${PROJECT_NAME}_BINARY_DIR})

ADD_EXECUTABLE(${EXEC_NAME}
    ${${EXEC_NAME}_SRC}
)

TARGET_LINK_LIBRARIES(${EXEC_NAME} ${PROJECT_NAME})
